Fix spacing bug between Features and HowMuchToSpend

--- a/src/sections/features/Features.module.scss
+++ b/src/sections/features/Features.module.scss
@@ -27,7 +27,7 @@ section[id="features"] {
   overflow: auto;
   padding-bottom: 128px;
 
-  @media (max-width: $screenSmall) {
-    padding-bottom: 52px;
+  @media (max-width: $screenPhone) {
+    padding-bottom: 12px;
   }
 }
